# CPU-Simulator

./: flake.nix  license  pyproject.toml  readme.md
CpuSchedulingWinForms/: Algorithms.cs
cpu_schedulers/: __main__.py  fcfs.py  gui.py  multilevel_queue.py  priority.py  process.py  resource.py  resource_manager.py  round_robin.py  scheduler.py  sjf.py
